--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App-camera {
+  min-height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: center;
